# gjdanawa-uploader

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
base_project/: launch.py
base_project/core/: __init__.py  depth_logging.py  utils.py
base_project/utils/: __init__.py  depth_logging.py  global_settings.py  timer.py  utils.py
configs/: crawler.yml
gjdanawa_uploader/: _utils.py  app.py  configs.py
gjdanawa_uploader/core/: depth_logging.py  llm.py  utils.py
gjdanawa_uploader/crawler/: base_crawler.py
gjdanawa_uploader/crawler/danawa/: danawa_crawler.py
gjdanawa_uploader/crawler/m11st/: __init__.py  m11st_crawler.py  m11st_crawler_version1.py  m11st_crawler_version2.py
gjdanawa_uploader/crawler/navershopping/: navershopping_crawler.py
gjdanawa_uploader/utils/: crawling.py
notebooks/examples/: playground.ipynb
sbin/: run.sh
