[tool.poetry]
name = "base-project"
version = "0.1.0"
description = "Base project environment"
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "base_project"}]

[tool.poetry.dependencies]
python = "^3.11"
dask = "^2024.7.0"
pyyaml = "^6.0.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
